--- a/src/components/ProductContainer.css
+++ b/src/components/ProductContainer.css
@@ -8,6 +8,11 @@
   flex-direction: column;
 }
 
+.productContainer-productTabs {
+  display: flex;
+  flex-direction: column;
+}
+
 /* link styling */
 .productContainer a,
 a:active,
